--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,6 @@
     <packaging>jar</packaging>
 
     <dependencies>
-        <!-- specifically avoiding dependencies to spinlab, so that this can be reused as a general purpose library -->
-        <dependency>
-            <groupId>rs2d</groupId>
-            <artifactId>rs2d-commons</artifactId>
-            <version>${spinlab.version}</version>
-        </dependency>
+        <!-- specifically avoiding dependencies -->
     </dependencies>
 </project>
