--- a/pom.xml
+++ b/pom.xml
@@ -2,16 +2,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>rs2d</groupId>
-        <artifactId>spinlab-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
-    </parent>
-
+    <groupId>rs2d</groupId>
     <artifactId>jcamp-parser</artifactId>
-    <version>${spinlab.version}</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
+
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <project.build.sourceEncoding>ISO-8859-15</project.build.sourceEncoding>       
+    </properties>
 
     <dependencies>
         <!-- specifically avoiding dependencies -->
